# energie-hdf-france

./: .env.exemple  .gitignore  Dockerfile  README.md  dashboard.py  init_db.sql  main.py  makefile  pyproject.toml
.github/workflows/: pipeline.yml
src/: extract.py  load.py  transform.py
test/: test_pipeline.py
