[project]
name = "energie-hdf-france"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

# Règles à ignorer si nécessaire (ex: lignes trop longues dans les commentaires)
ignore = []

[tool.ruff.format]
# Configuration du formateur (style proche de Black)
quote-style = "double"
indent-style = "space"